applications/ingress/todo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: todo.local
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-frontend-svc
                port:
                  number: 80

          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 5000
